[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvlisk"
version = "0.1.0"
description = "A wrapper for uv that manages versions via mise"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.scripts]
uvlisk = "uvlisk.main:main"
